# aggregation-sgx-fl

./: .gitignore  Makefile  aes_trusted.cpp  aes_trusted.manifest.template  client.cpp  dp_mechanisms.h  readme.md  results.md  run_benchmark.sh  server.cpp  setup.cpp  setup.manifest.template  setup_trusted.cpp  setup_trusted.manifest.template  terse.cpp  terse.h  trusted.cpp  trusted.manifest.template
include/common/: metrics_csv.h  metrics_stats_csv.h  terse_timings_summary.h
include/terse/: terse.h
python/: terse_python.cpp  test_python_bindings.py
sgx/: aes_trusted.manifest.template  setup_trusted.manifest.template  trusted.manifest.template  trusted_round.manifest.template
src/: aes_trusted.cpp  client.cpp  setup_clients.cpp  terse.cpp  terse.h  trusted.cpp  trusted_round.cpp
src/aes/: aes_client.cpp  aes_common.h  aes_trusted.cpp
src/terse/: client.cpp  server.cpp  setup_clients.cpp  setup_trusted.cpp  terse.cpp  trusted.cpp  trusted_round.cpp
terse-fl/: final_model.pt  nohup.out  pyproject.toml
terse-fl/pytorchexample/: __init__.py  client_app.py  enclave_ipc.py  schedule_io.py  server_app.py  setup.py  task.py  terse_strategy.py  terse_utils.py
