# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terse-fl"
version = "1.0.0"
description = "Federated Learning with TERSE Secure Aggregation"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pytorchexample"]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
# Training hyperparameters
num-server-rounds = 100
local-epochs = 1
batch-size = 32
learning-rate = 0.01
fraction-evaluate = 1.0

# TERSE-specific configuration
num-clients = 100
vector-dim = 4096
plaintext-modulus = 65537
scale-factor = 1000
