# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terse-fl"
version = "1.0.0"
description = "Federated Learning with TERSE Secure Aggregation"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pytorchexample"]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"


[tool.flwr.app.config]
# Training hyperparameters
num-server-rounds = 25
local-epochs = 1
batch-size = 32
learning-rate = 0.1
fraction-evaluate = 1.0

num-clients = 100
vector-dim = 4096
plaintext-modulus = 65537
scale-factor = 1000

fraction-fit = 1.0
schedule-seed = 12345


[tool.terse.clipping]
enabled = true
l2_clip_norm = 1.0

[tool.terse.dp]
enabled = false
mechanism = "gaussian"   # "none" | "laplace" | "gaussian"
epsilon = 1.0
delta = 1e-5            # only used for gaussian

# Sensitivity in *quantized integer units*.
# If 0, it will be derived from clipping: round(l2_clip_norm * scale_factor).
sensitivity = 0
